--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@ let responseSubmitted=false;
 let trialStartTime=null;
 const visuals=[];
 let completedTrials=0;
-let animalIndex = 0; // add near the top of your script
-
+let animalIndex = 0;
 
 window.onload = async () => {
   while (!participantID) {
@@ -138,7 +137,6 @@ window.onload = async () => {
   showIntroScreen();
 };
 
-
 function updateScreen(html,background=null){
   const s=document.getElementById("screen");
   s.innerHTML=html;
@@ -147,9 +145,7 @@ function updateScreen(html,background=null){
 
 async function loadCSVData(blockType) {
   const response = await fetch(BLOCK_FILES[blockType]);
-  if (!response.ok) {
-    throw new Error(`HTTP ${response.status}`);
-  }
+  if (!response.ok) throw new Error(`HTTP ${response.status}`);
   const text = await response.text();
   const lines = text.trim().split('\n').slice(1);
   const parsed = lines.map(line => line.split(','));
@@ -168,7 +164,8 @@ function showIntroScreen() {
           My name is Melody, and I love music!<br>
           Every day, I ride a musical elevator to get to music class.<br>
           But today the elevator is full of surprises, and we might even meet some animal friends!<br>
-          Will you help me figure out what's going on?        </p>
+          Will you help me figure out what's going on?
+        </p>
         <button id="continueIntro" class="btn-primary" style="margin-top:30px;font-size:1em;">Click to Play</button>
         <audio id="introAudio" src="intro_narration.mp3"></audio>
       </div>
@@ -190,24 +187,21 @@ function showIntroScreen() {
 }
 
 function showIntroVideo() {
-  updateScreen(`␊
+  updateScreen(`
     <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;">
       <video id="introVideo" width="100%" height="100%" playsinline muted style="max-width:100%;max-height:100%;background:white;">
         <source src="intro_video.mp4" type="video/mp4" />
       </video>
-      <audio id="introNarration2" src="intro_narration2.mp3"></audio>␊
-    </div>␊
+      <audio id="introNarration2" src="intro_narration2.mp3"></audio>
+    </div>
   `);
 
   const video = document.getElementById("introVideo");
   const narration = document.getElementById("introNarration2");
 
   const startPlayback = async () => {
-    try {
-      await Promise.all([video.play(), narration.play()]);
-    } catch (err) {
-      console.warn("Playback failed:", err);
-    }
+    try { await Promise.all([video.play(), narration.play()]); }
+    catch (err) { console.warn("Playback failed:", err); }
     video.onended = () => setTimeout(showNarrationScreen, 2000);
   };
 
@@ -239,11 +233,7 @@ function showNarrationScreen() {
 
   button.addEventListener("click", async () => {
     button.disabled = true;
-    try {
-      await audio.play();
-    } catch (err) {
-      console.warn("Audio play failed:", err);
-    }
+    try { await audio.play(); } catch (err) { console.warn("Audio play failed:", err); }
     audio.onended = () => setTimeout(showFastIntro, 1500);
   });
 }
@@ -349,7 +339,7 @@ function runTempoPractice() {
 
   function nextPractice() {
     if (i >= practiceTrials.length) {
-      currentBlockIndex = 0; // ✅ SET tempo block here
+      currentBlockIndex = 0;
       trialCounter = 1;
       showRealTrialsIntro();
       return;
@@ -361,7 +351,6 @@ function runTempoPractice() {
   nextPractice();
 }
 
-
 function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
   updateScreen(`
     <div style="width:100%; height:100%; display:flex; align-items:center; justify-content:center; background:white;">
@@ -372,11 +361,7 @@ function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
   `);
 
   const video = document.getElementById("practiceVideo");
-
-  video.onended = () => {
-    showTempoResponseScreen(correctAnswer, callback);
-  };
-
+  video.onended = () => { showTempoResponseScreen(correctAnswer, callback); };
   video.play().catch(err => {
     console.warn("Autoplay issue or play failed:", err);
     showTempoResponseScreen(correctAnswer, callback);
@@ -428,7 +413,9 @@ function showTempoResponseScreen(correctAnswer, callback) {
   });
 }
 
-  function runPitchDemo() {
+/* --------------------- PITCH PRACTICE ------------------------ */
+
+function runPitchDemo() {
   updateScreen(`
     <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
       <p style="font-size:1.5em;line-height:1.6;max-width:800px;text-align:center;">
@@ -499,7 +486,7 @@ function runPitchPractice() {
 
   function nextPractice() {
     if (i >= pitchPracticeTrials.length) {
-      showPitchInstructions(); // → then instructions page
+      showPitchInstructions();
       return;
     }
     const trial = pitchPracticeTrials[i++];
@@ -508,6 +495,7 @@ function runPitchPractice() {
 
   nextPractice();
 }
+
 function playPitchPracticeVideo(videoFile, correctAnswer, callback) {
   updateScreen(`
     <div style="width:100%; height:100%; display:flex; align-items:center; justify-content:center; background:white;">
@@ -518,14 +506,13 @@ function playPitchPracticeVideo(videoFile, correctAnswer, callback) {
   `);
 
   const video = document.getElementById("practiceVideo");
-  video.onended = () => {
-    showPitchResponseScreen(correctAnswer, callback);
-  };
+  video.onended = () => { showPitchResponseScreen(correctAnswer, callback); };
   video.play().catch(err => {
     console.warn("Autoplay issue or play failed:", err);
     showPitchResponseScreen(correctAnswer, callback);
   });
 }
+
 function showPitchResponseScreen(correctAnswer, callback) {
   updateScreen(`
 <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%;
@@ -571,7 +558,7 @@ function showPitchResponseScreen(correctAnswer, callback) {
   });
 }
 
-  function showPitchInstructions() {
+function showPitchInstructions() {
   setTimeout(() => {
     updateScreen(`
       <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
@@ -606,8 +593,7 @@ Then, choose which elevator I rode: the normal one, or the magical one!<br>
   }, 1500);
 }
 
-
-/* REAL TRIALS */
+/* --------------------- REAL TRIALS ------------------------ */
 
 function showRealTrialsIntro() {
   // make sure an old overlay isn’t covering your buttons
@@ -655,7 +641,6 @@ Then, choose which elevator I rode: the normal one, or the magical one! <br><br>
   startBtn.addEventListener("click", startRealTrials);
 }
 
-
 async function startRealTrials() {
   const block = BLOCK_ORDER[currentBlockIndex];
 
@@ -682,7 +667,6 @@ async function startRealTrials() {
   updatePlayButton();
 }
 
-  
 function setupVisualElements() {
   visuals.length=0;
   visuals.push(
@@ -697,24 +681,13 @@ function setupVisualElements() {
 
 function showAutoplayOverlay(audio, callback) {
   const overlay = document.getElementById("overlay");
-  overlay.innerHTML =
-    '<button id="resumeAudio" class="btn-primary">Start Audio</button>';
+  overlay.innerHTML = '<button id="resumeAudio" class="btn-primary">Start Audio</button>';
   overlay.style.display = "flex";
-  document
-    .getElementById("resumeAudio")
-    .addEventListener(
-      "click",
-      async () => {
-        overlay.style.display = "none";
-        try {
-          await audio.play();
-          callback();
-        } catch (err) {
-          console.warn("Audio play failed:", err);
-        }
-      },
-      { once: true }
-    );
+  document.getElementById("resumeAudio").addEventListener("click", async () => {
+    overlay.style.display = "none";
+    try { await audio.play(); callback(); }
+    catch (err) { console.warn("Audio play failed:", err); }
+  }, { once: true });
 }
 
 function updatePlayButton() {
@@ -723,8 +696,10 @@ function updatePlayButton() {
   trialControls.innerHTML = `<button id="playButton" class="btn-primary">Start ${block.toUpperCase()} Trial ${trialCounter} of ${TRIALS_PER_BLOCK}</button>`;
   document.getElementById("playButton").addEventListener("click", playTrial);
 }
+
 function hideAll() {
   visuals.forEach(v => {
+    if (!v.el) return;
     v.el.style.display = "none";
     if (v.el.tagName === "VIDEO") {
       v.el.pause();
@@ -732,7 +707,7 @@ function hideAll() {
     }
   });
 }
-  
+
 async function playTrial() {
   console.log('playTrial called');
 
@@ -740,7 +715,7 @@ async function playTrial() {
   const tc = document.getElementById("trialControls");
   if (tc) tc.innerHTML = "";
 
-  hideAll(); // this just hides videos/stills but keeps DOM intact
+  hideAll(); // hide videos/stills but keep DOM intact
 
   // ensure visuals point at the current DOM after any rebuilds
   if (visuals.length !== 6 || visuals.some(v => !v.el || !document.body.contains(v.el))) {
@@ -783,7 +758,7 @@ async function playTrial() {
     new Promise(res => { if (v2.readyState >= 1) res(); else v2.onloadedmetadata = res; })
   ]);
 
-  // Prime videos
+  // Prime videos (best-effort)
   await Promise.all([
     v1.play().then(() => v1.pause()).catch(()=>{}),
     vGap.play().then(() => vGap.pause()).catch(()=>{}),
@@ -817,7 +792,7 @@ async function playTrial() {
 
   let currentVisual = null;
 
-  function updateVisuals() {
+  function stepVisuals() {
     const time = audio.currentTime;
     for (const v of visuals) {
       if (time >= v.start && time < v.end) {
@@ -831,7 +806,7 @@ async function playTrial() {
       }
     }
     if (time < visuals[visuals.length - 1].end) {
-      requestAnimationFrame(updateVisuals);
+      requestAnimationFrame(stepVisuals);
     } else {
       hideAll();
       showResponseOptions();
@@ -842,10 +817,10 @@ async function playTrial() {
     console.log('Attempting to play audio:', audio.src);
     await audio.play();
     console.log('Audio playback started');
-    updateVisuals();
+    stepVisuals();
   } catch (err) {
     console.warn("Audio autoplay blocked or failed:", err);
-    showAutoplayOverlay(audio, updateVisuals);
+    showAutoplayOverlay(audio, stepVisuals);
     const overlay = document.getElementById("overlay");
     if (overlay) {
       overlay.innerHTML += '<div style="font-size:1.2em;margin-top:16px;">Audio was blocked. Click the button above to start the trial.</div>';
@@ -853,43 +828,6 @@ async function playTrial() {
   }
 }
 
-
-  function updateVisuals() {
-    const time = audio.currentTime;
-    for (const v of visuals) {
-      if (time >= v.start && time < v.end) {
-        if (currentVisual !== v.el) {
-          hideAll();
-          v.el.style.display = "block";
-          if (v.el.tagName === "VIDEO") v.el.play();
-          currentVisual = v.el;
-        }
-        break;
-      }
-    }
-    if (time < visuals[visuals.length - 1].end) {
-      requestAnimationFrame(updateVisuals);
-    } else {
-      hideAll();
-      showResponseOptions();
-    }
-  }
-
-  try {
-    console.log('Attempting to play audio:', audio.src);
-    await audio.play();
-    console.log('Audio playback started');
-    updateVisuals(); // begin visual sequence
-  } catch (err) {
-    console.warn("Audio autoplay blocked or failed:", err);
-    showAutoplayOverlay(audio, updateVisuals);
-    // Make overlay more obvious
-    const overlay = document.getElementById("overlay");
-    overlay.innerHTML += '<div style="color:red;font-size:1.5em;margin-top:20px;">Audio playback was blocked. Please click the button above to start the trial.</div>';
-  }
-}
-
-  
 function showResponseOptions() {
   updateScreen(`
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; padding: 20px; background: white;">
@@ -913,6 +851,7 @@ function showResponseOptions() {
   document.getElementById("normalElevator").addEventListener("click", () => handleResponse("normal"), { once: true });
   document.getElementById("magicalElevator").addEventListener("click", () => handleResponse("magical"), { once: true });
 }
+
 function handleResponse(choice) {
   if (responseSubmitted) return;
   responseSubmitted = true;
@@ -996,7 +935,7 @@ function showAnimalScreen(callback) {
   `);
   document.getElementById("continueAnimal").addEventListener("click", callback);
 }
-  
+
 function showParty() {
   updateScreen(`
     <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;background:white;padding:20px;">
@@ -1007,16 +946,22 @@ function showParty() {
     </div>
   `);
 }
+
 function rebuildBaseHTML() {
+  // Clear only the dynamic screen and trial controls; keep base media elements intact
   updateScreen("");
   document.getElementById("trialControls").innerHTML="";
   responseSubmitted=false;
   setupVisualElements();
 }
+
+// initial capture of base media nodes
 setupVisualElements();
 </script>
+
 </body>
 </html>
+
 
 
 
