--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ let responseSubmitted=false;
 let trialStartTime=null;
 const visuals=[];
 let completedTrials=0;
-let animalIndex = 0;
+let animalIndex = 0; // add near the top of your script
+
 
 window.onload = async () => {
   while (!participantID) {
@@ -137,6 +138,7 @@ window.onload = async () => {
   showIntroScreen();
 };
 
+
 function updateScreen(html,background=null){
   const s=document.getElementById("screen");
   s.innerHTML=html;
@@ -145,7 +147,9 @@ function updateScreen(html,background=null){
 
 async function loadCSVData(blockType) {
   const response = await fetch(BLOCK_FILES[blockType]);
-  if (!response.ok) throw new Error(`HTTP ${response.status}`);
+  if (!response.ok) {
+    throw new Error(`HTTP ${response.status}`);
+  }
   const text = await response.text();
   const lines = text.trim().split('\n').slice(1);
   const parsed = lines.map(line => line.split(','));
@@ -164,8 +168,7 @@ function showIntroScreen() {
           My name is Melody, and I love music!<br>
           Every day, I ride a musical elevator to get to music class.<br>
           But today the elevator is full of surprises, and we might even meet some animal friends!<br>
-          Will you help me figure out what's going on?
-        </p>
+          Will you help me figure out what's going on?        </p>
         <button id="continueIntro" class="btn-primary" style="margin-top:30px;font-size:1em;">Click to Play</button>
         <audio id="introAudio" src="intro_narration.mp3"></audio>
       </div>
@@ -187,21 +190,24 @@ function showIntroScreen() {
 }
 
 function showIntroVideo() {
-  updateScreen(`
+  updateScreen(`␊
     <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;">
       <video id="introVideo" width="100%" height="100%" playsinline muted style="max-width:100%;max-height:100%;background:white;">
         <source src="intro_video.mp4" type="video/mp4" />
       </video>
-      <audio id="introNarration2" src="intro_narration2.mp3"></audio>
-    </div>
+      <audio id="introNarration2" src="intro_narration2.mp3"></audio>␊
+    </div>␊
   `);
 
   const video = document.getElementById("introVideo");
   const narration = document.getElementById("introNarration2");
 
   const startPlayback = async () => {
-    try { await Promise.all([video.play(), narration.play()]); }
-    catch (err) { console.warn("Playback failed:", err); }
+    try {
+      await Promise.all([video.play(), narration.play()]);
+    } catch (err) {
+      console.warn("Playback failed:", err);
+    }
     video.onended = () => setTimeout(showNarrationScreen, 2000);
   };
 
@@ -233,7 +239,11 @@ function showNarrationScreen() {
 
   button.addEventListener("click", async () => {
     button.disabled = true;
-    try { await audio.play(); } catch (err) { console.warn("Audio play failed:", err); }
+    try {
+      await audio.play();
+    } catch (err) {
+      console.warn("Audio play failed:", err);
+    }
     audio.onended = () => setTimeout(showFastIntro, 1500);
   });
 }
@@ -339,7 +349,7 @@ function runTempoPractice() {
 
   function nextPractice() {
     if (i >= practiceTrials.length) {
-      currentBlockIndex = 0;
+      currentBlockIndex = 0; // ✅ SET tempo block here
       trialCounter = 1;
       showRealTrialsIntro();
       return;
@@ -351,6 +361,7 @@ function runTempoPractice() {
   nextPractice();
 }
 
+
 function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
   updateScreen(`
     <div style="width:100%; height:100%; display:flex; align-items:center; justify-content:center; background:white;">
@@ -361,7 +372,11 @@ function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
   `);
 
   const video = document.getElementById("practiceVideo");
-  video.onended = () => { showTempoResponseScreen(correctAnswer, callback); };
+
+  video.onended = () => {
+    showTempoResponseScreen(correctAnswer, callback);
+  };
+
   video.play().catch(err => {
     console.warn("Autoplay issue or play failed:", err);
     showTempoResponseScreen(correctAnswer, callback);
@@ -412,8 +427,6 @@ function showTempoResponseScreen(correctAnswer, callback) {
     });
   });
 }
-
-/* --------------------- PITCH PRACTICE ------------------------ */
 
 function runPitchDemo() {
   updateScreen(`
@@ -476,7 +489,7 @@ function runPitchDemo() {
     document.getElementById("startPitchPractice").addEventListener("click", runPitchPractice);
   }
 }
-
+  
 function runPitchPractice() {
   const pitchPracticeTrials = [
     { video: "PT_HIGH2.mp4", correct: "high" },
@@ -486,7 +499,7 @@ function runPitchPractice() {
 
   function nextPractice() {
     if (i >= pitchPracticeTrials.length) {
-      showPitchInstructions();
+      showPitchInstructions(); // → then instructions page
       return;
     }
     const trial = pitchPracticeTrials[i++];
@@ -495,7 +508,6 @@ function runPitchPractice() {
 
   nextPractice();
 }
-
 function playPitchPracticeVideo(videoFile, correctAnswer, callback) {
   updateScreen(`
     <div style="width:100%; height:100%; display:flex; align-items:center; justify-content:center; background:white;">
@@ -506,13 +518,14 @@ function playPitchPracticeVideo(videoFile, correctAnswer, callback) {
   `);
 
   const video = document.getElementById("practiceVideo");
-  video.onended = () => { showPitchResponseScreen(correctAnswer, callback); };
+  video.onended = () => {
+    showPitchResponseScreen(correctAnswer, callback);
+  };
   video.play().catch(err => {
     console.warn("Autoplay issue or play failed:", err);
     showPitchResponseScreen(correctAnswer, callback);
   });
 }
-
 function showPitchResponseScreen(correctAnswer, callback) {
   updateScreen(`
 <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%;
@@ -565,13 +578,13 @@ function showPitchInstructions() {
         <p style="font-size:1.5em;line-height:1.8;max-width:800px;text-align:center;">
           I need your help! This time, when I get in the elevator you will stay outside. When the door closes,  you won’t hear the song anymore even though it will keep playing in the elevator for me. Keep singing the song in your head so that when the elevator gets to the next floor and the doors open up, you can tell me if I was in the normal elevator or the magical one. <br><br>
 If the music stayed the same, that was a normal elevator.<br>
-But if the pitch of the music changed, then I must have ridden the magical elevator! <br>
+But if the pitch of the music changed, then Melody must have ridden the magical elevator! <br>
 So listen carefully, and keep the music playing in your head.<br>
 Then, choose which elevator I rode: the normal one, or the magical one!<br>
  Are you ready?<br>
  Let’s go!
         </p>
-        <audio id="pitchInstructions" src="PITCH_INSTRUCTIONS.mp3"></audio>
+        <audio id="pitchInstructions" src="PT_PITCH_INSTRUCTIONS.mp3"></audio>
       </div>
     `);
 
@@ -593,27 +606,23 @@ Then, choose which elevator I rode: the normal one, or the magical one!<br>
   }, 1500);
 }
 
-/* --------------------- REAL TRIALS ------------------------ */
+/* REAL TRIALS */
 
 function showRealTrialsIntro() {
-  // make sure an old overlay isn’t covering your buttons
-  const overlay = document.getElementById('overlay');
-  if (overlay) overlay.style.display = 'none';
-
   updateScreen(`
     <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;
       background: white;
       padding:40px;box-sizing:border-box;">
       <h1 style="color:#4b2e83; font-size:2em; margin-bottom:20px;">Amazing work!</h1>
       <p style="max-width:800px; font-size:1.3em; text-align:center; line-height:1.6; margin-bottom:20px;">
-        I need your help! <br><br> This time, when I get in the elevator you will stay outside. When the door closes,  
-you won’t hear the song anymore even though it will keep playing in the elevator for me. <br> Keep singing the song in your head
-so that when the elevator gets to the next floor and the doors open up, you can tell me if I was in the normal elevator or the magical one. <br><br>
+        I need your help! This time, when I get in the elevator you will stay outside. When the door closes,  <br>
+you won’t hear the song anymore even though it will keep playing in the elevator for me. Keep singing the song in your head <br>
+so that when the elevator gets to the next floor and the doors open up, you can tell me if I was in the normal elevator or the magical one. <br>
 If the music stayed the same, that was a normal elevator. <br>
-But if the speed of the music changed, then I must have ridden the magical elevator! <br>
-So listen carefully, and keep the music playing in your head. 
+But if the speed of the music changed, then Melody must have ridden the magical elevator! <br>
+So listen carefully, and keep the music playing in your head. <br>
 Then, choose which elevator I rode: the normal one, or the magical one! <br><br>
- Are you ready? 
+ Are you ready? <br>
  Let’s go!
 <br><br>
       </p>
@@ -627,22 +636,23 @@ Then, choose which elevator I rode: the normal one, or the magical one! <br><br>
   const startBtn = document.getElementById("startRealTrials");
   const audio = document.getElementById("realInstructionsAudio");
 
-  if (!playBtn || !startBtn || !audio) {
-    console.error("Intro elements missing from DOM.");
-    return;
-  }
-
   playBtn.addEventListener("click", async () => {
     playBtn.disabled = true;
-    try { await audio.play(); } catch (err) { console.warn("Autoplay blocked:", err); }
-    audio.onended = () => { startBtn.style.display = "inline-block"; };
+    try {
+      await audio.play();
+    } catch (err) {
+      console.warn("Autoplay blocked or failed:", err);
+    }
+    audio.onended = () => {
+      startBtn.style.display = "inline-block";
+    };
   });
 
   startBtn.addEventListener("click", startRealTrials);
 }
 
 async function startRealTrials() {
-  const block = BLOCK_ORDER[currentBlockIndex];
+  const block = BLOCK_ORDER[currentBlockIndex]; // <-- don't override here
 
   try {
     if (!blocks[block] || blocks[block].length === 0) {
@@ -652,21 +662,16 @@ async function startRealTrials() {
   } catch (err) {
     updateScreen(`<h2>⚠️ Failed to load block: ${block}<br>${err.message}</h2>`);
     return;
-  }
+ }
 
   trialsInCurrentBlock = 0;
   animalsShownInBlock = 0;
 
-  // Rebuild the persistent base UI (audio, videos, trialControls, overlay, etc.)
   rebuildBaseHTML();
-
-  // IMPORTANT: re-grab fresh DOM nodes for visuals after rebuilding
-  setupVisualElements();
-
-  // Create the “Start Trial …” button
   updatePlayButton();
 }
 
+  
 function setupVisualElements() {
   visuals.length=0;
   visuals.push(
@@ -681,13 +686,24 @@ function setupVisualElements() {
 
 function showAutoplayOverlay(audio, callback) {
   const overlay = document.getElementById("overlay");
-  overlay.innerHTML = '<button id="resumeAudio" class="btn-primary">Start Audio</button>';
+  overlay.innerHTML =
+    '<button id="resumeAudio" class="btn-primary">Start Audio</button>';
   overlay.style.display = "flex";
-  document.getElementById("resumeAudio").addEventListener("click", async () => {
-    overlay.style.display = "none";
-    try { await audio.play(); callback(); }
-    catch (err) { console.warn("Audio play failed:", err); }
-  }, { once: true });
+  document
+    .getElementById("resumeAudio")
+    .addEventListener(
+      "click",
+      async () => {
+        overlay.style.display = "none";
+        try {
+          await audio.play();
+          callback();
+        } catch (err) {
+          console.warn("Audio play failed:", err);
+        }
+      },
+      { once: true }
+    );
 }
 
 function updatePlayButton() {
@@ -696,10 +712,8 @@ function updatePlayButton() {
   trialControls.innerHTML = `<button id="playButton" class="btn-primary">Start ${block.toUpperCase()} Trial ${trialCounter} of ${TRIALS_PER_BLOCK}</button>`;
   document.getElementById("playButton").addEventListener("click", playTrial);
 }
-
 function hideAll() {
   visuals.forEach(v => {
-    if (!v.el) return;
     v.el.style.display = "none";
     if (v.el.tagName === "VIDEO") {
       v.el.pause();
@@ -707,20 +721,12 @@ function hideAll() {
     }
   });
 }
-
+  
 async function playTrial() {
   console.log('playTrial called');
-
-  // clear only the trialControls area (do not call updateScreen("") here)
-  const tc = document.getElementById("trialControls");
-  if (tc) tc.innerHTML = "";
-
-  hideAll(); // hide videos/stills but keep DOM intact
-
-  // ensure visuals point at the current DOM after any rebuilds
-  if (visuals.length !== 6 || visuals.some(v => !v.el || !document.body.contains(v.el))) {
-    setupVisualElements();
-  }
+  document.getElementById("trialControls").innerHTML = "";
+  updateScreen("");
+  hideAll();
 
   const block = BLOCK_ORDER[currentBlockIndex];
   const trial = blocks[block][trialCounter - 1];
@@ -735,34 +741,25 @@ async function playTrial() {
   const gapSec = parseFloat(gap);
   const testSec = parseFloat(test);
 
-  const audio = document.getElementById("myAudio");
-  if (!audio) {
-    updateScreen('<h2>Error: Missing <audio id="myAudio"> in the base HTML.</h2>');
-    return;
-  }
+   const audio = document.getElementById("myAudio");
   audio.src = filename;
   audio.load();
   currentAudioFile = filename;
+  
+  const [v1, vGap, v2] = visuals.filter(v => v.el.tagName === "VIDEO").map(v => v.el);
 
-  const videos = visuals.filter(v => v.el && v.el.tagName === "VIDEO").map(v => v.el);
-  if (videos.length !== 3) {
-    updateScreen('<h2>Error: Expected 3 videos (video1, gapVideo, video2) in the DOM.</h2>');
-    return;
-  }
-  const [v1, vGap, v2] = videos;
-
-  // Wait for metadata
+  // Wait for all videos to have metadata loaded
   await Promise.all([
     new Promise(res => { if (v1.readyState >= 1) res(); else v1.onloadedmetadata = res; }),
     new Promise(res => { if (vGap.readyState >= 1) res(); else vGap.onloadedmetadata = res; }),
     new Promise(res => { if (v2.readyState >= 1) res(); else v2.onloadedmetadata = res; })
   ]);
 
-  // Prime videos (best-effort)
+  // Prime videos
   await Promise.all([
-    v1.play().then(() => v1.pause()).catch(()=>{}),
-    vGap.play().then(() => vGap.pause()).catch(()=>{}),
-    v2.play().then(() => v2.pause()).catch(()=>{})
+    v1.play().then(() => v1.pause()),
+    vGap.play().then(() => vGap.pause()),
+    v2.play().then(() => v2.pause())
   ]);
 
   const video1Sec = v1.duration;
@@ -775,9 +772,9 @@ async function playTrial() {
     return;
   }
 
-  const preStillSec  = Math.max(0, originalSec - video1Sec);
-  const gapStillSec  = Math.max(0, gapSec     - gapVideoSec);
-  const postStillSec = Math.max(0, testSec    - video2Sec);
+  const preStillSec = Math.max(0, originalSec - video1Sec);
+  const gapStillSec = Math.max(0, gapSec - gapVideoSec);
+  const postStillSec = Math.max(0, testSec - video2Sec);
 
   let t = 0;
   visuals[0].start = t; visuals[0].end = t += preStillSec;
@@ -792,7 +789,7 @@ async function playTrial() {
 
   let currentVisual = null;
 
-  function stepVisuals() {
+  function updateVisuals() {
     const time = audio.currentTime;
     for (const v of visuals) {
       if (time >= v.start && time < v.end) {
@@ -806,7 +803,7 @@ async function playTrial() {
       }
     }
     if (time < visuals[visuals.length - 1].end) {
-      requestAnimationFrame(stepVisuals);
+      requestAnimationFrame(updateVisuals);
     } else {
       hideAll();
       showResponseOptions();
@@ -817,17 +814,17 @@ async function playTrial() {
     console.log('Attempting to play audio:', audio.src);
     await audio.play();
     console.log('Audio playback started');
-    stepVisuals();
+    updateVisuals(); // begin visual sequence
   } catch (err) {
     console.warn("Audio autoplay blocked or failed:", err);
-    showAutoplayOverlay(audio, stepVisuals);
+    showAutoplayOverlay(audio, updateVisuals);
+    // Make overlay more obvious
     const overlay = document.getElementById("overlay");
-    if (overlay) {
-      overlay.innerHTML += '<div style="font-size:1.2em;margin-top:16px;">Audio was blocked. Click the button above to start the trial.</div>';
-    }
+    overlay.innerHTML += '<div style="color:red;font-size:1.5em;margin-top:20px;">Audio playback was blocked. Please click the button above to start the trial.</div>';
   }
 }
 
+  
 function showResponseOptions() {
   updateScreen(`
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; padding: 20px; background: white;">
@@ -851,7 +848,6 @@ function showResponseOptions() {
   document.getElementById("normalElevator").addEventListener("click", () => handleResponse("normal"), { once: true });
   document.getElementById("magicalElevator").addEventListener("click", () => handleResponse("magical"), { once: true });
 }
-
 function handleResponse(choice) {
   if (responseSubmitted) return;
   responseSubmitted = true;
@@ -935,7 +931,7 @@ function showAnimalScreen(callback) {
   `);
   document.getElementById("continueAnimal").addEventListener("click", callback);
 }
-
+  
 function showParty() {
   updateScreen(`
     <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;background:white;padding:20px;">
@@ -946,21 +942,17 @@ function showParty() {
     </div>
   `);
 }
-
 function rebuildBaseHTML() {
-  // Clear only the dynamic screen and trial controls; keep base media elements intact
   updateScreen("");
   document.getElementById("trialControls").innerHTML="";
   responseSubmitted=false;
   setupVisualElements();
 }
-
-// initial capture of base media nodes
 setupVisualElements();
 </script>
-
 </body>
 </html>
+
 
 
 
