--- a/index.html
+++ b/index.html
@@ -2,60 +2,80 @@
 <html>
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Melody's Mystery Elevator</title>
   <style>
-    body{
-      margin:0;
-      text-align:center;
-      background:#fff;
-      font-family:Arial, sans-serif;
+    :root { --bar-h: 10px; }
+
+    html, body {
+      height: 100%;
+      margin: 0;
+      background: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
     }
+    /* Prevent background page scroll; let #screen scroll instead if needed */
+    body { overflow: hidden; }
+
+    /* FILL the visible viewport on phones/tablets/desktops */
     #visual-container{
-      width:90vw;
-      height:80vh;
-      max-width:1400px;
-      max-height:950px;
-      margin:80px auto 0;
-      background:#fff;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      box-shadow:0 2px 12px rgba(0,0,0,.07);
-      overflow:hidden;
-      position:relative;
+      width: 100vw;
+      height: 100dvh;             /* dynamic viewport height (mobile-safe) */
+      margin: 0;
+      max-width: none;
+      max-height: none;
+      background: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 2px 12px rgba(0,0,0,.07);
+      overflow: hidden;
+      position: relative;
     }
+
+    /* Centered content layer; scroll here if text is long */
     #screen{
-      position:absolute; inset:0;
-      display:flex; align-items:center; justify-content:center;
-      flex-direction:column;
-      background:transparent;
+      position: absolute; inset: 0;
+      display: flex; align-items: center; justify-content: center;
+      flex-direction: column;
+      background: transparent;
+      overflow: auto;
+      -webkit-overflow-scrolling: touch;
+      padding: clamp(12px, 2vh, 24px);
+      /* keep a little space under the progress bar */
+      padding-top: calc(var(--bar-h) + 8px);
     }
-   .media-content {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-#visual-container video,
-#visual-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  background:#fff;
-}
-    #overlay{
-      position:fixed; inset:0;
+
+    .media-content {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      display: none;
+      position: absolute;
+      inset: 0;
       background:#fff;
-      display:flex; flex-direction:column;
-      align-items:center; justify-content:center;
-      z-index:1000;
     }
+    #visual-container video,
+    #visual-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      background:#fff;
+    }
+
+    #overlay{
+      position: fixed; inset: 0;
+      background:#fff;
+      display: none; /* shown only when autoplay is blocked */
+      flex-direction: column;
+      align-items: center; justify-content: center;
+      z-index: 1200;
+      padding: 16px;
+    }
+
     .btn-primary{
-      padding:20px 48px;
-      font-size:1.5em;
+      padding: clamp(12px, 2vh, 20px) clamp(20px, 5vw, 48px);
+      font-size: clamp(1rem, 2.5vw, 1.5rem);
       border-radius:12px; border:none;
       background:linear-gradient(135deg,#f3e7ff,#d0b3ff);
       color:#4b2e83; font-weight:bold;
@@ -64,12 +84,32 @@
       transition:transform .2s, box-shadow .2s;
     }
     .btn-primary:hover{transform:scale(1.05); box-shadow:0 6px 18px rgba(75,46,131,.4);}
+
     .tempo-btn,.elevator-option{cursor:pointer; transition:transform .2s;}
     .tempo-btn:hover,.elevator-option:hover{transform:scale(1.05);}
-    #progressWrapper{position:fixed;top:0;left:0;width:100%;height:20px;background:#eee;}
+
+    /* thin progress bar, above everything except overlay */
+    #progressWrapper{
+      position:fixed; top:0; left:0; width:100%;
+      height: var(--bar-h);
+      background:#eee;
+      z-index:1100;
+    }
     #progressBar{height:100%;width:0;background:#4b2e83;transition:width .3s;}
+
+    /* Keep trial button visible at bottom of the screen */
+    #trialControls{
+      position: fixed;
+      left: 0; right: 0;
+      bottom: calc(env(safe-area-inset-bottom, 0px) + 12px);
+      display: flex; justify-content: center; gap: 12px;
+      z-index: 1150;
+      pointer-events: none;         /* container ignores clicks */
+    }
+    #trialControls .btn-primary { pointer-events: auto; } /* buttons clickable */
   </style>
 </head>
+
 
 <body>
   <div id="overlay" style="display:none;"></div>
@@ -952,6 +992,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
