--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@ function showIntroScreen() {
 }
 
 function showIntroVideo() {
-  updateScreen(`␊
+  updateScreen(`
     <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;">
       <video id="introVideo" width="100%" height="100%" playsinline muted style="max-width:100%;max-height:100%;background:white;">
         <source src="intro_video.mp4" type="video/mp4" />
       </video>
       <audio id="introNarration2" src="intro_narration2.mp3"></audio>␊
-    </div>␊
+    </div>
   `);
 
   const video = document.getElementById("introVideo");
@@ -992,6 +992,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
