--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ function showIntroVideo() {
       <video id="introVideo" width="100%" height="100%" playsinline muted style="max-width:100%;max-height:100%;background:white;">
         <source src="intro_video.mp4" type="video/mp4" />
       </video>
-      <audio id="introNarration2" src="intro_narration2.mp3"></audio>␊
+      <audio id="introNarration2" src="intro_narration2.mp3"></audio>
     </div>
   `);
 
@@ -992,6 +992,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
