--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@ const TOTAL_TRIALS = TRIALS_PER_BLOCK * BLOCK_ORDER.length;
 const ANIMALS_PER_BLOCK = 3;
 const ANIMAL_INTERVAL = Math.ceil(TRIALS_PER_BLOCK / ANIMALS_PER_BLOCK);
 const ANIMALS = [
-  {name:"Tiger", image:"tiger.png", action:"Roar like a tiger 3 times!"},
-  {name:"Lion", image:"lion.png", action:"Stretch tall like a lion!"},
-  {name:"Penguin", image:"penguin.png", action:"Waddle and flap like a penguin for 5 seconds!"},
-  {name:"Monkey", image:"monkey.png", action:"Scratch and giggle like a silly monkey!"},
-  {name:"Elephant", image:"elephant.png", action:"Stomp your feet like an elephant 5 times!"},
-  {name:"Parrot", image:"parrot.png", action:"Flap your wings and squawk like a parrot!"}
+  {name:"Tiger", image:"tiger.png", sound:"tiger.mp3", action:"Paws up! Roar like a tiger 3 times!"},
+  {name:"Lion", image:"lion.png", sound:"lion.mp3", action:"Stand tall like a lion. Reach up high and hold a big stretch for 5 seconds."},
+  {name:"Penguin", image:"penguin.png", sound:"penguin.mp3", action:"Heels together, wings out! Waddle 6 steps in place while flapping."},
+  {name:"Monkey", image:"monkey.png", sound:"monkey.mp3", action:"Scratch and giggle like a silly monkey - ooh-ooh, aah-aah!"},
+  {name:"Elephant", image:"elephant.png", sound:"elephant.mp3", action:"One arm is your trunk. Swing it side-to-side and stomp 5 slow steps."},
+  {name:"Parrot", image:"parrot.png", sound:"parrot.mp3", action:"Stand tall, flap 8 times, then give one big squawk — ‘SQUAWK!’"}
 ];
 
 let pitchPracticeCompleted = false;
@@ -167,13 +167,17 @@ window.onload = async () => {
   sessionID = `${participantID}_${new Date().toISOString()}`;
 
   // Preload all blocks at the start
-  for (const block of BLOCK_ORDER) {
+   for (const block of BLOCK_ORDER) {
     try {
       await loadCSVData(block);
     } catch (err) {
       alert(`Failed to load ${block} trials: ${err.message}`);
     }
   }
+  // Preload animal sounds so they play immediately when needed
+  ANIMALS.forEach(a => {
+    a.audio = new Audio(a.sound);
+  });
 
   showIntroScreen();
 };
@@ -969,6 +973,14 @@ function showAnimalScreen(callback) {
       <button id="continueAnimal" class="btn-primary" style="margin-top:20px;">Continue</button>
     </div>
   `);
+  if (animal.audio) {
+    try {
+      animal.audio.currentTime = 0;
+      animal.audio.play();
+    } catch (err) {
+      console.warn("Animal sound failed to play:", err);
+    }
+  }
   document.getElementById("continueAnimal").addEventListener("click", callback);
 }
   
@@ -992,6 +1004,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
